add_library(Spreadsheet Spreadsheet.h Spreadsheet.cpp)
add_library(SpreadsheetCell SpreadsheetCell.h SpreadsheetCell.cpp)
add_library(EvenSequence EvenSequence.h EvenSequence.cpp)
add_executable(SpreadsheetCellMain main.cpp)
target_link_libraries(SpreadsheetCellMain SpreadsheetCell EvenSequence)
add_test(SpreadsheetCell SpreadsheetCellMain)
